Styling home-page: - recent news section completed with flex - added alignwide and alignfull stylings since block editor requires styling - the wp-block-group with columns are not centering, misalignment issue will be addressed next time - also need to look into setting content width maybe

--- a/sass/base/typography/_copy.scss
+++ b/sass/base/typography/_copy.scss
@@ -1,6 +1,11 @@
-p {
-	margin-bottom: 1.5em;
+p:not(p a) {
+	margin: 0 1.5em 1.5em;
 }
+
+p:has(> a:only-child) {
+	margin: 0;
+}
+  
 
 dfn,
 cite,
