--- a/sass/base/typography/_headings.scss
+++ b/sass/base/typography/_headings.scss
@@ -5,6 +5,7 @@ h3,
 h4,
 h5,
 h6 {
+	margin: 1rem 2rem .625rem;
 	font-family: $font__heading; 
 	clear: both;
 }
